--- a/tmpl/form.tmpl
+++ b/tmpl/form.tmpl
@@ -248,8 +248,8 @@ func (o *$obj.name.value) GetLabel() string {
 	return "$obj.label"
 }
 
-func (o *$obj.name.value) GetName() string {
-	return "$obj.name.value"
+func (o *$obj.name.value) GetScope() string {
+	return "$obj.scope"
 }
 
 func (o *$obj.name.value) GetWidgetByLabel(label string) (w *Widget) {
