--- a/tmpl/form.tmpl
+++ b/tmpl/form.tmpl
@@ -266,6 +266,41 @@ func (o *$obj.name.value) GetWidgetByLabel(label string) (w *Widget) {
 	return
 }
 
+
+func (o *$obj.name.value) GetRawString(fieldKey string) (Value string) {
+	switch fieldKey {
+#for field in $obj.fields
+	case "$field.name.value":
+	#if $field.name.value == "ID"
+		Value = o.ID.Hex()
+	#else if $field.type == "string"
+		Value = o.$field.name.value
+	#else if $field.type == "i32" and $field.widget_type == "datetime"
+		Value = I32Time(o.$field.name.value)
+	#else if $field.type == "i32"
+		Value = strconv.FormatInt(int64(o.$field.name.value), 10)
+	#else if $field.type == "i64" and $field.widget_type == "datetime"
+		Value = I64DateTime(o.$field.name.value)
+	#else if $field.type == "i64" and $field.widget_type == "date"
+		Value = I64Date(o.$field.name.value)
+	#else if $field.type == "i64" and $field.widget_type == "time"
+		Value = I64Time(o.$field.name.value)
+	#else if $field.type == "i64"
+		Value = strconv.FormatInt(int64(o.$field.name.value), 10)
+	#else if $field.type == "double"
+		Value = strconv.FormatFloat(o.$field.name.value, 'f', 2, 64)
+	#else if $field.type == "bool"
+		Value = strconv.FormatBool(o.$field.name.value)
+	#else if $field.type == "list<string>"
+		Value = strings.Join(o.$field.name.value, "\n")
+	#else
+	Change go.tmpl go support $field.type now!
+	#end if
+#end for
+	}
+	return
+}
+
 func (o *$obj.name.value) GetFieldAsString(fieldKey string) (Value string) {
 	switch fieldKey {
 #for field in $obj.listedFieldStrings
