--- a/tmpl/crud.tmpl
+++ b/tmpl/crud.tmpl
@@ -239,6 +239,10 @@ func $(className)Create(ctx *$(className)Context) (html string) {
 #for field in $obj.fields
 	#if $field.defaultValue == "currentUser"
 		obj.$field.name.value = ctx.User.Id()
+	#else if $field.defaultValue == "currentUserDept" or ($field.name.value == "DepartmentsID" and $field.widget_type == "select")
+		obj.$field.name.value = ctx.User.GetDepartmentID()
+	#else if $field.defaultValue == "currentUserOrg" or ($field.name.value == "OrganizationsID" and $field.widget_type == "select")
+		obj.$field.name.value = ctx.User.GetOrganizationID()
 	#end if
 	#if $obj.has_docnumber
 		obj.Number = "保存后，系统自动生成..."
